--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,8 +19,10 @@ h2.head {
             border-radius: 0.25rem;
             border: 1px solid var(--black-85);
             background: var(--black-100);
+            cursor: pointer;
             summary {
                 display: flex;
+                user-select: none;
                 padding: 0.37rem 0.87rem;
                 gap: 0.44rem;
                 color: var(--black-30);
@@ -70,7 +72,14 @@ h2.head {
 .data-table {
     margin-top: 2rem;
     .table-ft-wrapper {
+        --gtc: repeat(4, 1fr);
+        --gap: 2.5rem;
         margin-top: 1.25rem;
+        background: var(--black-100);
+        border-radius: 0.5rem;
+        box-shadow: 0px 2px 6px 0px rgba(26, 24, 30, 0.04);
+        padding: 0.75rem;
+        padding-bottom: 1.75rem;
         .table-ft {
             display: flex;
             align-items: center;
@@ -124,6 +133,67 @@ h2.head {
                     line-height: 0;
                     border-radius: 0.25rem;
                     border: 1px solid var(--black-85);
+                }
+            }
+        }
+        .ch-right {
+            justify-content: end;
+            text-align: right;
+        }
+        .table-header {
+            margin-top: 0.75rem;
+            display: grid;
+            grid-template-columns: var(--gtc);
+            column-gap: var(--gap);
+            padding: 0.625rem 0.75rem;
+            border-radius: 0.25rem;
+            background: var(--black-95);
+            .column-head {
+                display: flex;
+                align-items: center;
+                gap: 0.25rem;
+                color: var(--black-30);
+                font-size: 0.875rem;
+                font-weight: 500;
+                line-height: 1.25rem; /* 142.857% */
+            }
+            #orderDate {
+                &::after {
+                    content: url("data:image/svg+xml,%3Csvg width='8' height='8' viewBox='0 0 8 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3.43025 6.23409L0.606918 2.3286C0.548707 2.24507 0.517907 2.15037 0.517581 2.05392C0.517255 1.95746 0.547415 1.86262 0.60506 1.77882C0.662705 1.69502 0.745826 1.62519 0.846154 1.57627C0.946481 1.52736 1.06052 1.50106 1.17692 1.5H6.82358C6.93998 1.50106 7.05402 1.52736 7.15435 1.57627C7.25468 1.62519 7.3378 1.69502 7.39544 1.77882C7.45309 1.86262 7.48325 1.95746 7.48292 2.05392C7.4826 2.15037 7.45179 2.24507 7.39358 2.3286L4.57025 6.23409C4.51083 6.31526 4.42716 6.38238 4.32732 6.42895C4.22747 6.47553 4.11483 6.5 4.00025 6.5C3.88567 6.5 3.77303 6.47553 3.67319 6.42895C3.57334 6.38238 3.48967 6.31526 3.43025 6.23409V6.23409Z' fill='%234D4D4D'/%3E%3C/svg%3E%0A");
+                }
+            }
+            #transactionFees {
+                &::after {
+                    content: url("data:image/svg+xml,%3Csvg width='14' height='14' viewBox='0 0 14 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_0_1574)'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M6.99995 1.63336C4.03602 1.63336 1.63328 4.0361 1.63328 7.00003C1.63328 9.96396 4.03602 12.3667 6.99995 12.3667C9.96388 12.3667 12.3666 9.96396 12.3666 7.00003C12.3666 4.0361 9.96388 1.63336 6.99995 1.63336ZM0.699951 7.00003C0.699951 3.52063 3.52056 0.700027 6.99995 0.700027C10.4793 0.700027 13.3 3.52063 13.3 7.00003C13.3 10.4794 10.4793 13.3 6.99995 13.3C3.52056 13.3 0.699951 10.4794 0.699951 7.00003Z' fill='%234D4D4D'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M6.99995 6.62365C7.25768 6.62365 7.46662 6.83259 7.46662 7.09032L7.46663 9.44587C7.46663 9.7036 7.25769 9.91254 6.99996 9.91254C6.74223 9.91254 6.53329 9.7036 6.53329 9.44587L6.53328 7.09032C6.53328 6.83259 6.74222 6.62366 6.99995 6.62365Z' fill='%234D4D4D'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M7.52777 4.75835C7.52777 5.04985 7.29146 5.28616 6.99997 5.28616C6.70847 5.28616 6.47216 5.04985 6.47216 4.75835C6.47216 4.46686 6.70847 4.23055 6.99997 4.23055C7.29146 4.23055 7.52777 4.46686 7.52777 4.75835Z' fill='%234D4D4D'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_0_1574'%3E%3Crect width='14' height='14' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A");
+                    line-height: 0;
+                }
+            }
+        }
+        .table-body {
+            .row {
+                padding: 0.88rem 0.75rem;
+                position: relative;
+                display: grid;
+                grid-template-columns: var(--gtc);
+                column-gap: var(--gap);
+                span {
+                    color: var(--black-12);
+                    font-size: 0.875rem;
+                    line-height: 1.25rem; /* 142.857% */
+                }
+                .orderID {
+                    font-weight: 500;
+                    color: var(--primary-blue);
+                }
+                &::after {
+                    content: "";
+                    position: absolute;
+                    bottom: 0;
+                    width: calc(100% - 24px);
+                    height: 1px;
+                    background: var(--black-90);
+                    left: 50%;
+                    translate: -50% 0;
                 }
             }
         }
