chore: added responsiveness

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,18 @@
+@import "styles/breakpoints.scss";
 #root {
-  max-width: 1440px;
-  margin-inline: auto;
-  display: grid;
-  grid-template-areas: 
-  "aside header"
-  "aside main";
-  grid-template-columns: auto 1fr;
-  grid-template-rows: auto 1fr;
-  height: 100vh;
+    max-width: 1440px;
+    margin-inline: auto;
+    display: grid;
+    grid-template-areas:
+        "aside header"
+        "aside main";
+    grid-template-columns: auto 1fr;
+    grid-template-rows: auto 1fr;
+    height: 100vh;
+    @include respond-to(tablet) {
+        grid-template-areas:
+            "header"
+            "main";
+        grid-template-columns: 1fr;
+    }
 }
