--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,14 +1,22 @@
+@import "styles/breakpoints.scss";
+
 .glob-header {
     display: flex;
+    grid-area: header;
     align-items: center;
     padding: 0.75rem 2rem;
     justify-content: space-between;
     border-bottom: 1px solid var(--black-85);
     background: var(--black-100);
+    gap: 0.5rem;
+    @include respond-to(tablet) {
+        padding: 0.5rem 1rem;
+    }
 }
 .h-left {
     display: flex;
     gap: 1rem;
+    align-items: center;
     .current-page {
         color: var(--black-12);
         font-size: 0.9375rem;
@@ -21,16 +29,23 @@
         display: flex;
         align-items: center;
         gap: 0.38rem;
+        svg {
+            flex-shrink: 0;
+        }
     }
 }
 .h-mid {
     align-self: stretch;
-    flex-shrink: 0;
+    flex-basis: 25rem;
+    @include respond-to(mobile) {
+        display: none;
+    }
     search {
         display: flex;
         align-items: center;
     }
     form {
+        width: 100%;
         position: relative;
         label {
             position: absolute;
@@ -41,8 +56,9 @@
         }
     }
     input[type="search"] {
-        all: unset;
-        width: 25rem;
+        border: none;
+        font: inherit;
+        width: 100%;
         border-radius: 0.375rem;
         background: var(--black-95);
         padding: 0.5625rem 1rem;
@@ -54,7 +70,7 @@
 }
 .h-right {
     display: flex;
-    gap: 0.75rem;
+    gap: 0.5rem;
     .icon-btn {
         line-height: 0;
         border-radius: 50%;
